--- a/index.html
+++ b/index.html
@@ -236,19 +236,12 @@
          <div class="container">
             <div class="col-md-6 col-md-offset-3 text-center package">
                <h4>Seasonal Items</h4>
-               <p>Barry likes to change it up every now and then.<br>Our current seasonal tasty baked goods are:</p>
-               <ul>
-                  <li>Coconut Crème Sticky Bun</li>
-                  <li>Blueberry Crumb Cake</li>
-               </ul>
-               <!-- Button -->
-               <div class="page-scroll">
-                  <a class="btn" href="#menu">
-                     <div class="btn-line offer"></div>
-                     <div class="btn-line btn-line-shift"></div>
-                     Menu
-                  </a>
+               <p>Follow Us on Facebook & Instagram for the latest seasonal flavors of our sticky buns and any other seasonally tasty baked goods.</p>
+               <div class="social-media">
+                  <a href="https://www.facebook.com/barrysbuns" title=""><i class="fa fa-facebook"></i></a>
+                  <a href="https://www.instagram.com/barrysbuns" title=""><i class="fa fa-instagram"></i></a>
                </div>
+
             </div>
          <!-- /col-md-6 -->
          </div>
@@ -449,6 +442,14 @@
                <!-- /col-md-12-->
             </div>
             <!--/row --> 
+            <!-- Button -->
+               <div class="page-scroll align-center">
+                  <a class="btn" href="https://www.yelp.com/biz/barrys-buns-philadelphia">
+                     <div class="btn-line"></div>
+                     <div class="btn-line btn-line-shift"></div>
+                     Find Us On Yelp
+                  </a>
+               </div>
          </div>
          <!--/container --> 
       </section>
@@ -609,7 +610,7 @@
                            <!-- /col-md-6 -->
                         </div>
                         <!-- /.row -->
-                        <p class="col-md-12">Menu and prices are subject to change without notice</.p>  
+                        <p class="col-md-12">Menu and prices are subject to change without notice.</p>  
                      </div>
                      <!-- /#tab1 -->
                      <div class="tab-pane fade" id="tab2">
@@ -633,7 +634,7 @@
                                           $7
                                        </div>
                                        <div class="menu-item-description">
-                                         This cake is not always easy to find but we have it! It is made with a sweet yeasted dough crust and topped with a sweet buttery vanilla filling, which makes a gooey center.  Served in an 8-inch square pan.
+                                         This cake is not always easy to find but we have it! It is made with a sweet yeasted dough crust and topped with a sweet buttery vanilla filling, which makes a gooey center. Served in an 8-inch square pan.
                                        </div>
                                     </div>
                                     <!-- Item ends -->
@@ -669,7 +670,7 @@
                                           $12
                                        </div>
                                        <div class="menu-item-description">
-                                          A dense sweet bread that’s swirled with chocolate or cinnamon and topped with nuggets of our signature streusel glazed with either icing or chocolate.
+                                          A dense sweet bread that’s swirled with chocolate or cinnamon and topped with nuggets of our signature streusel and glazed with either icing or chocolate.
                                        </div>
                                     </div>
                                     <!-- Item ends -->
@@ -682,7 +683,7 @@
                                           $4 slice / $20 whole
                                        </div>
                                        <div class="menu-item-description">
-                                          A moist cinnamon cake layered with cinnamon, sugar, and apples. You are missing out if you have not this cake!
+                                          A moist cinnamon cake layered with cinnamon, sugar, and apples. You are missing out if you have not tried this cake!
                                        </div>
                                     </div>
                                     <!-- Item ends -->
@@ -793,7 +794,7 @@
                                           $3
                                        </div>
                                        <div class="menu-item-description">
-                                          A richer, denser, sweeter, and chewier waffle that is the most common waffle available in Belgium.  An adaptation of brioche bread dough with chunks of pearl sugar.
+                                          A richer, denser, sweeter, and chewier waffle that is the most common waffle available in Belgium. An adaptation of brioche bread dough with chunks of pearl sugar.
                                        </div>
                                     </div>
                                     <!-- Item ends -->
@@ -919,7 +920,7 @@
                                           $2.50
                                        </div>
                                        <div class="menu-item-description">
-                                          This is your traditional chocolate chip cookie except Barry's is over loaded with mini chocolate chip morsels
+                                          This is your traditional chocolate chip cookie except Barry's is over loaded with mini chocolate chip morsels.
                                        </div>
                                     </div>
                                     <!-- Item ends -->
@@ -1060,7 +1061,7 @@
                                           $16
                                        </div>
                                        <div class="menu-item-description">
-                                          A dense and moist cake smothered with lots of streusel (crumb) topping. The extra crumb topping outweighs the cake! We offer the traditional flavor crumb cake and a seasonal flavor
+                                          A dense and moist cake smothered with lots of streusel (crumb) topping. The extra crumb topping outweighs the cake! We offer the traditional flavor crumb cake and a seasonal flavor.
                                        </div>
                                     </div>
                                     <!-- Item ends -->
@@ -1074,7 +1075,7 @@
                                           $30
                                        </div>
                                        <div class="menu-item-description">
-                                          Now this is the best of both worlds - Barry’s sticky buns and bread pudding! Bite size pieces of our sticky buns in a rich custard baked to a golden-brown perfection.  No wonder it is a best seller!  Serves 12-15
+                                          Now this is the best of both worlds - Barry’s sticky buns and bread pudding! Bite size pieces of our sticky buns in a rich custard baked to a golden-brown perfection. No wonder it is a best seller! Serves 12-15
                                        </div>
                                     </div>
                                     <!-- Item ends -->
@@ -1087,7 +1088,7 @@
                                           Call for pricing & options
                                        </div>
                                        <div class="menu-item-description">
-                                          Our sticky buns tiered in as many desired tiers and iced with our signature cream cheese icing
+                                          Our sticky buns tiered in as many desired tiers and iced with our signature cream cheese icing.
                                        </div>
                                     </div>
                                     <!-- Item ends -->
@@ -1126,7 +1127,7 @@
                                           Call for pricing & options
                                        </div>
                                        <div class="menu-item-description">
-                                          We can customize a platter however you like! The possibilities are endless
+                                          We can customize a platter however you like! The possibilities are endless.
                                        </div>
                                     </div>
                                     <!-- Item ends -->
@@ -1139,7 +1140,7 @@
                                           Call for pricing & options
                                        </div>
                                        <div class="menu-item-description">
-                                          Having an event and want to offer something than the usual? Talk to us!  We are happy to accommodate the needs of your function and the catering ideas are endless - breakfast meetings, brunches, dessert table, and even weddings
+                                          Having an event and want to offer something other than the usual? Talk to us!  We are happy to accommodate the needs of your function and the catering ideas are endless - breakfast meetings, brunches, dessert table, and even weddings.
                                        </div>
                                     </div>
                                     <!-- Item ends --> 
@@ -1342,7 +1343,7 @@
                </div>
                <!-- /col-lg-4 -->
                <div class="col-md-12 text-center">
-                  <p>Copyright © 2017 - Designed by  <a href="http://www.ingridkuhn.com">Ingrid Kuhn</a> | Developed by Jessica Cornell</p>
+                  <p>Copyright © 2017 - Designed by  <a href="http://www.ingridkuhn.com">Ingrid Kuhn</a> and Jessica Cornell</p>
                   <!-- /container -->
                   <!-- Go To Top Link -->
                   <div class="page-scroll hidden-sm hidden-xs">
