here goes nothing stupid ie

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                <i class="fa fa-bars"></i>
                </button>
                <!-- Logo -->
-               <div class="navbar-brand page-scroll">
+               <div class="navbar-brand page-scroll ie9">
                   <a href="#page-top"><img src="img/barrys-copy-logo-5.png"  alt=""></a>
                </div>
             </div>
@@ -105,7 +105,7 @@
                   <!--Title -->
                   <div class="slide__text first-slide-box">
                      <h1 class="hidden-sm hidden-xs first-slide-text"><span>Welcome to</span></h1>
-                     <div class="first-slide-logo"><img src="img/barrys-full-logo.png"/></div>
+                     <div class="first-slide-logo ie9"><img src="img/barrys-full-logo.png"/></div>
                   </div>
                   <!--/Slide__text -->
                </div>
@@ -443,8 +443,8 @@
             </div>
             <!--/row --> 
             <!-- Button -->
-               <div class="page-scroll align-center">
-                  <a class="btn" href="https://www.yelp.com/biz/barrys-buns-philadelphia">
+               <div class="page-scroll align-center yelp-btn">
+                  <a class="btn" target="_blank" href="https://www.yelp.com/biz/barrys-buns-philadelphia">
                      <div class="btn-line"></div>
                      <div class="btn-line btn-line-shift"></div>
                      Find Us On Yelp
