--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                <i class="fa fa-bars"></i>
                </button>
                <!-- Logo -->
-               <div class="navbar-brand page-scroll ie9">
-                  <a href="#page-top"><img src="img/barrys-copy-logo-5.png"  alt=""></a>
+               <div class="navbar-brand page-scroll">
+                  <a href="#page-top"><img src="img/barrys-copy-logo-7.png"  alt=""></a>
                </div>
             </div>
             <!-- /.navbar-header -->
@@ -105,7 +105,7 @@
                   <!--Title -->
                   <div class="slide__text first-slide-box">
                      <h1 class="hidden-sm hidden-xs first-slide-text"><span>Welcome to</span></h1>
-                     <div class="first-slide-logo ie9"><img src="img/barrys-full-logo.png"/></div>
+                     <div class="first-slide-logo"><img src="img/barrys-full-logo.png"/></div>
                   </div>
                   <!--/Slide__text -->
                </div>
@@ -1273,7 +1273,7 @@
                   <ul class="contact-info align-center">
                      <li><i class="fa fa-map-marker"></i>8229 Germantown Avenue, Philadelphia, PA</li>
                      <li><i class="fa fa-phone"></i>267-521-BUNS</li>
-                     <li><i class="fa fa-envelope"></i><a href="mailto:BarrysBuns@gmail.com">BarrysBuns@gmail.com</a> </li>
+                     <li><i class="fa fa-envelope"></i>BarrysBuns@gmail.com</li>
                   </ul>
                   <!--/Contact_form -->
                </div>
