--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                </button>
                <!-- Logo -->
                <div class="navbar-brand page-scroll">
-                  <a href="#page-top"><img src="img/barrys-copy-logo-7.png"  alt=""></a>
+                  <a href="#page-top"><img src="img/barrys-buns_resized.png"  alt=""></a>
                </div>
             </div>
             <!-- /.navbar-header -->
