updates to the full sized logo

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   <!--Title -->
                   <div class="slide__text first-slide-box">
                      <h1 class="hidden-sm hidden-xs first-slide-text"><span>Welcome to</span></h1>
-                     <div class="first-slide-logo"><img src="img/barrys-full-logo.png"/></div>
+                     <div class="first-slide-logo"><img src="img/barrys-buns-full-logo_resized.png"/></div>
                   </div>
                   <!--/Slide__text -->
                </div>
