remove nav items and update inactive carousel

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                   <li><a href="#page-top">Home</a></li>
                   <li><a href="#about">About us</a></li>
                   <li><a href="#menu">Menu</a></li>
-                  <li><a href="#wholesale">Wholesale</a></li>
-                  <li><a href="#fundraising">Fundraising</a></li>
+                  <!-- <li><a href="#wholesale">Wholesale</a></li> -->
+                  <!-- <li><a href="#fundraising">Fundraising</a></li> -->
                   <li><a href="#contact">Contact</a></li>
                </ul>
             </div>
@@ -79,7 +79,7 @@
       <!-- Slider -->
       <div class="slider-container">
          <!-- Controls -->
-         <div class="slider-control left inactive"></div>
+         <div class="slider-control left"></div>
          <div class="slider-control right"></div>
          <ul class="slider-pagi"></ul>
          <!--Slider -->
