udpates to h4 paragraph issue

--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
       <section id="promo">
          <div class="container">
             <div class="col-md-8 col-sm-6 col-centered box">
-               <h4>We are happy to accommodate the needs of your function.<br>Breakfast meetings, brunches, desserts, waffle station, platters - the catering ideas are endless!</p>
+               <h4>We are happy to accommodate the needs of your function.<br>Breakfast meetings, brunches, desserts, waffle station, platters - the catering ideas are endless!</h4>
                <!-- Button -->
                <div class="page-scroll align-center">
                   <a class="btn " href="#contact">
@@ -1281,7 +1281,7 @@
                   <img src="img/bakery_3.jpg">
                </div>
                <div class="col-lg-5 col-md-5 polaroid hidden-sm hidden-xs polaroid-contact-2">
-                  <p>“2017 BEST of PHILLY FOOD DESTINATION”</p>
+                  <p>“2017 Best of Philly Food Destination"</p>
                   <img src="img/market-fareway2.jpg">
                </div>
             </div>
