removing hide on medium to see if this fixes the issues on smaller dekstop sizes

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   <!--Title -->
                   <div class="slide__text">
                      <h1><span>We Love</span><br>Buns</h1>
-                     <div class="hidden-xs hidden-sm hidden-md">
+                     <div class="hidden-xs hidden-sm">
                         <p class="subtitle">We specialize in gourmet sticky buns<br>and cinnamon rolls.</p>
                         <div class="page-scroll">
                            <!-- Button -->
@@ -171,7 +171,7 @@
                   <!--Title -->
                   <div class="slide__text">
                      <h1><span>Try our other</span><br>Baked Goods</h1>
-                     <div class="hidden-xs hidden-sm hidden-md">
+                     <div class="hidden-xs hidden-sm">
                         <p class="subtitle">Sticky bun bread pudding, crumb cake, tea cookies, brownies, liege waffles, german butter cake, and more!</p>
                         <div class="page-scroll">
                            <!-- Button -->
@@ -209,7 +209,7 @@
                   <!--Title -->
                   <div class="slide__text">
                      <h1><span>We are</span><br>Au-Naturale</h1>
-                     <div class="hidden-xs hidden-sm hidden-md">
+                     <div class="hidden-xs hidden-sm">
                         <p class="subtitle">There are no preservatives, artificial flavors,<br>or colors in any of our tasty baked goods!<br>Nothing fake in these buns!</p>
                         <div class="page-scroll">
                            <!-- Button -->
