--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <![endif]-->
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-      <meta name="description" content="">
+      <meta name="description" content="Barry’s Buns is a family owned bakery located in the heart of Chestnut Hill, Philadelphia, Pennsylvania. Our tasty baked goods are crafted by a pastry chef with 20 years in the industry. We do not use preservatives, artificial flavors or colors in our tasty baked goods.">
       <meta name="author" content="">
       <!-- Page title -->
       <title>Barry's Buns - We Love Buns</title>
