--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
       <![endif]-->
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
       <meta name="description" content="Barry’s Buns is a family owned bakery known for their sticky buns located in the heart of Chestnut Hill. We do not use preservatives, artificial flavors or colors.">
-      <meta name="author" content="">
+      <meta name="author" content=""> 
+      <link rel="canonical" href="http://www.barrysbuns.com/">
       <!-- Page title -->
       <title>Barry's Buns - We Love Buns</title>
       <!--[if lt IE 9]>
