adding recaptcha js script file in head

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
       <link rel="stylesheet" href="css/plugins.css">
       <!-- Favicons-->
       <link rel="shortcut icon" sizes="32x32" href="img/Barrys.png">
+      <!-- reCAPTCHA -->
+      <script src='https://www.google.com/recaptcha/api.js'></script>
    </head>
    <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
       <!-- Navbar -->
