adding recaptcha div before button in contact us form

--- a/index.html
+++ b/index.html
@@ -1235,7 +1235,10 @@
                         <input type="email" name="email" class="form-control input-field" placeholder="Email" required="">           
                         <input type="text" name="subject" class="form-control input-field" placeholder="Subject">                                          
                         <textarea name="message" id="message" class="textarea-field form-control" rows="4" placeholder="Enter your message" required=""></textarea>
+                        <!-- Honeypot -->
                         <input type="text" name="_gotcha" style="display:none" />
+                        <!-- reCAPTCHA -->
+                        <div class="g-recaptcha" data-sitekey="6Lev4jEUAAAAAAsX3DrKz46Yaggl1ZWtWTZzH5N1"></div>
                         <!-- Button -->
                         <button type="submit" value="send" class="btn">
                            <div class="btn-line"></div>
