adding a second recaptcha and am not sure why it's not doing what it should

--- a/index.html
+++ b/index.html
@@ -1238,7 +1238,7 @@
                         <!-- Honeypot -->
                         <input type="text" name="_gotcha" style="display:none" />
                         <!-- reCAPTCHA -->
-                        <!-- <div class="g-recaptcha" data-sitekey="6Lev4jEUAAAAAAsX3DrKz46Yaggl1ZWtWTZzH5N1"></div> -->
+                        <div class="g-recaptcha" data-sitekey="6Lev4jEUAAAAAAsX3DrKz46Yaggl1ZWtWTZzH5N1"></div>
                         <!-- Button -->
                         <button type="submit" value="send" class="btn">
                            <div class="btn-line"></div>
