--- a/index.html
+++ b/index.html
@@ -1235,6 +1235,8 @@
                         <input type="email" name="email" class="form-control input-field" placeholder="Email" required="">           
                         <input type="text" name="subject" class="form-control input-field" placeholder="Subject">                                          
                         <textarea name="message" id="message" class="textarea-field form-control" rows="4" placeholder="Enter your message" required=""></textarea>
+                        <!-- redirect user after submission -->
+                        <input type="hidden" name="_next" value="www.barrysbuns.com/" />
                         <!-- Honeypot -->
                         <input type="text" name="_gotcha" style="display:none" />
                         <!-- reCAPTCHA -->
@@ -1245,11 +1247,11 @@
                            <div class="btn-line btn-line-shift"></div>
                            Send Message
                         </button>
-                        <script>
-                            var contactform =  document.getElementById('contactform');
-                            contactform.setAttribute('action', '//formspree.io/' + 'barrysbuns' + '@' + 'gmail' + '.' + 'com');
-                        </script>
                      </form>
+                     <script>
+                         var contactform =  document.getElementById('contactform');
+                         contactform.setAttribute('action', '//formspree.io/' + 'barrysbuns' + '@' + 'gmail' + '.' + 'com');
+                     </script>
                   </div>
                   <div class="text-left timetable res-margin box first-time">
                   <!-- Sign-->
