--- a/index.html
+++ b/index.html
@@ -1230,15 +1230,13 @@
                      <!-- Contact results -->
                      <div id="contact_results"></div>
                      <!-- Form Starts -->
-                     <form class="form-group" id="contactform" method="POST">
+                     <form action="https://formcarry.com/s/SJqHnJ-ef" class="form-group" id="contactform" method="POST" accept-charset="UTF-8">
                         <input type="text" name="name" class="form-control input-field" placeholder="Name" required="">                    
                         <input type="email" name="email" class="form-control input-field" placeholder="Email" required="">           
                         <input type="text" name="subject" class="form-control input-field" placeholder="Subject">                                          
                         <textarea name="message" id="message" class="textarea-field form-control" rows="4" placeholder="Enter your message" required=""></textarea>
                         <!-- Honeypot -->
                         <input type="text" name="_gotcha" style="display:none" />
-                        <!-- reCAPTCHA -->
-                        <!-- <div class="g-recaptcha" data-sitekey="6Lev4jEUAAAAAAsX3DrKz46Yaggl1ZWtWTZzH5N1"></div> -->
                         <!-- Button -->
                         <button type="submit" value="send" class="btn">
                            <div class="btn-line"></div>
@@ -1246,10 +1244,6 @@
                            Send Message
                         </button>
                      </form>
-                     <script>
-                         var contactform =  document.getElementById('contactform');
-                         contactform.setAttribute('action', '//formspree.io/' + 'barrysbuns' + '@' + 'gmail' + '.' + 'com');
-                     </script>
                   </div>
                   <div class="text-left timetable res-margin box first-time">
                   <!-- Sign-->
