adding gift cards to site

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   <li><a href="#page-top">Home</a></li>
                   <li><a href="#about">About us</a></li>
                   <li><a href="#menu">Menu</a></li>
-                  <!-- <li><a href="#wholesale">Wholesale</a></li> -->
+                  <li><a href="https://squareup.com/gift/D2GTEN1S5Q0Y1/order">Gift Cards</a></li>
                   <!-- <li><a href="#fundraising">Fundraising</a></li> -->
                   <li><a href="#contact">Contact</a></li>
                </ul>
