adding phone number field in contact us form

--- a/index.html
+++ b/index.html
@@ -1233,6 +1233,7 @@
                      <form action="https://formcarry.com/s/SJqHnJ-ef" class="form-group" id="contactform" method="POST" accept-charset="UTF-8">
                         <input type="text" name="name" class="form-control input-field" placeholder="Name" required="">                    
                         <input type="email" name="email" class="form-control input-field" placeholder="Email" required="">           
+                        <input type="tel" name="phone" class="form-control input-field" placeholder="Phone Number" required="">           
                         <input type="text" name="subject" class="form-control input-field" placeholder="Subject">                                          
                         <textarea name="message" id="message" class="textarea-field form-control" rows="4" placeholder="Enter your message" required=""></textarea>
                         <!-- Honeypot -->
