updates for stores hours and column width along with bourse pic

--- a/index.html
+++ b/index.html
@@ -1211,30 +1211,55 @@
                   </div>
                   <div class="text-left timetable res-margin box first-time">
                   <!-- Sign-->
-                  <h5 class="align-center">Hours @ The Market</h5>
+                  <h5 class="align-center">Store Hours</h5>
                   <!-- Table-->
+                  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                   <table class="table">
                      <tbody>
+                        <tr>
+                           <td class="text-left">Market</td>
+                        </tr>
                         <tr>
                            <td class="text-left">Sunday – Wednesday:</td>
                            <td class="text-right">CLOSED</td>
                         </tr>
                         <tr>
-                           <td class="text-left">Thursday – Friday:</td>
-                           <td class="text-right">9:00 a.m. to 6:00 p.m.</td>
+                           <td class="text-left">Thursday & Friday:</td>
+                           <td class="text-right">9 am to 6 pm</td>
                         </tr>
                         <tr>
                            <td class="text-left">Saturday:</td>
-                           <td class="text-right">8:00 a.m. to 5:00 p.m.</td>
+                           <td class="text-right">8 am to 5 pm</td>
                         </tr>
                      </tbody>
                   </table>
-                  <!-- <h4>Get in touch with us</h4> -->
-                  <p>We are located within the MARKET at the Fareway (formerly known as the Chestnut Hill Farmers Market). We are proud to be one of the vendors that makes the MARKET a 2017 Best of Philly Food Destination! Our address is Germantown Avenue; however, the MARKET is not directly on Germantown Avenue; it is directly behind the Chestnut Hill Hotel, the Post Office, Green Soul, and Follicles Hair Salon.</p>
-                  <p>There is a free parking lot on Southampton Avenue (across from Jenks John S School).</p>
+                  </div>
+                  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                  <table class="table">
+                     <tbody>
+                        <tr>
+                           <td class="text-left">Bourse</td>
+                        </tr>
+                        <tr>
+                           <td class="text-left">Monday – Thursday:</td>
+                           <td class="text-right">8 am to 7 pm</td>
+                        </tr>
+                        <tr>
+                           <td class="text-left">Friday & Saturday:</td>
+                           <td class="text-right">8 am to 7 pm</td>
+                        </tr>
+                        <tr>
+                           <td class="text-left">Sunday:</td>
+                           <td class="text-right">10 am to 6 pm</td>
+                        </tr>
+                     </tbody>
+                  </table>
+                  </div>
+                  <p>Market at the Fareway: We are proud to be one of the vendors that makes the MARKET a 2017 Best of Philly Food Destination! Our address is Germantown Avenue; however, the MARKET is not directly on Germantown Avenue; it is directly behind the Chestnut Hill Hotel. There is a free parking lot on Southampton Avenue (across from Jenks John S School).</p>
                </div>
                   <ul class="contact-info align-center">
-                     <li><i class="fa fa-map-marker"></i>8221 Germantown Avenue, Philadelphia, PA</li>
+                     <li><i class="fa fa-map-marker"></i>111 S. Independence Mall East, Philadelphia, PA</li>
+                     <li><i class="fa fa-map-marker"></i>8221 Germantown Avenue, Philadelphia, PA</li><br>
                      <li><i class="fa fa-phone"></i>267-521-BUNS</li>
                      <li><i class="fa fa-envelope"></i>BarrysBuns@gmail.com</li>
                   </ul>
@@ -1242,12 +1267,15 @@
                </div>
                <!-- / col-lg-7-->
                <div class="col-lg-5 col-md-5 polaroid hidden-sm hidden-xs">
+                  <p>Market @ The Fareway<br>"2017 Best of Philly Food Destination"</p>
                   <img src="img/bakery_3.jpg">
                </div>
                <div class="col-lg-5 col-md-5 polaroid hidden-sm hidden-xs polaroid-contact-2">
-                  <p>“2017 Best of Philly Food Destination"</p>
-                  <img src="img/market-fareway2.jpg">
+                  <p>Bourse<br>"2017 Best of Philly Food Destination"</p>
+                  <img src="img/bourse-pic.jpg">
                </div>
+               
+               
             </div>
             <!--/row -->            
          </div>
@@ -1278,13 +1306,13 @@
             <!-- /row -->
             <div class="row margin-footer">
                <!-- about -->
-               <div class="col-lg-4 col-md-4 col-md-offset-2 col-lg-offset-2 text-right">
+               <div class="col-lg-4 col-md-4 col-lg-offset-1 text-left">
                   <h6>HAVE A CATERING EVENT?</h6>
                   <p>Our current hours do not apply to any catering event. Talk to us as we are happy to accommodate the requested day and time of your event if possible.</p>
                </div>
                <!-- /col-lg-4 -->  			
                <!-- Opening Hours -->
-               <div class="col-lg-4 col-md-4 text-left timetable res-margin">
+               <div class="col-lg-3 col-md-4 text-left timetable res-margin">
                   <!-- Sign-->
                   <h6>HOURS @ The MARKET</h6>
                   <!-- Table-->
@@ -1296,11 +1324,32 @@
                         </tr>
                         <tr>
                            <td class="text-left">Thursday – Friday:</td>
-                           <td class="text-right">9:00 a.m. to 6:00 p.m.</td>
+                           <td class="text-right">9 am to 6 pm</td>
                         </tr>
                         <tr>
                            <td class="text-left">Saturday:</td>
-                           <td class="text-right">8:00 a.m. to 5:00 p.m.</td>
+                           <td class="text-right">8 am to 5 pm</td>
+                        </tr>
+                     </tbody>
+                  </table>
+               </div>
+               <div class="col-lg-3 col-md-4 text-left timetable res-margin">
+                  <!-- Sign-->
+                  <h6>HOURS @ Bourse</h6>
+                  <!-- Table-->
+                  <table class="table">
+                     <tbody>
+                        <tr>
+                           <td class="text-left">Monday – Thursday:</td>
+                           <td class="text-right">8 am to 7 pm</td>
+                        </tr>
+                        <tr>
+                           <td class="text-left">Friday & Saturday:</td>
+                           <td class="text-right">8 am to 7 pm</td>
+                        </tr>
+                        <tr>
+                           <td class="text-left">Sunday:</td>
+                           <td class="text-right">10 am to 6 pm</td>
                         </tr>
                      </tbody>
                   </table>
