i forgot to update something

--- a/index.html
+++ b/index.html
@@ -1271,7 +1271,7 @@
                   <img src="img/bakery_3.jpg">
                </div>
                <div class="col-lg-5 col-md-5 polaroid hidden-sm hidden-xs polaroid-contact-2">
-                  <p>Bourse<br>"2017 Best of Philly Food Destination"</p>
+                  <p>The Bourse Marketplace</p>
                   <img src="img/bourse-pic.jpg">
                </div>
                
@@ -1356,7 +1356,7 @@
                </div>
                <!-- /col-lg-4 -->
                <div class="col-md-12 text-center">
-                  <p>Copyright © 2017 - Designed by  <a href="http://www.ingridkuhn.com">Ingrid Kuhn</a> and Jessica Cornell</p>
+                  <p>Copyright © 2018 - Designed by  <a href="http://www.ingridkuhn.com">Ingrid Kuhn</a> and Jessica Cornell</p>
                   <!-- /container -->
                   <!-- Go To Top Link -->
                   <div class="page-scroll hidden-sm hidden-xs">
